<resources>
    <string name="app_name">LivestockCare</string>
    <string name="livestock_care">LivestockCare</string>

    <string name="workers">Workers</string>
    <string name="products">Products</string>
    <string name="sales">Sales</string>
    <string name="livestock">Animals</string>
    <string name="footer">\@2023 Livestockcare ltd</string>
    <string name="footer_low">Developed by NomaCo.</string>
    <string name="logo">logo_image</string>
    <string name="worker_name">Kiwatule Davis</string>
    <string name="worker_role">Cultivator</string>
    <string name="worker_image" />
    <string name="product_image">product image</string>
    <string name="sale_image">sales image</string>
    <string name="animal_image">animal image</string>
    <string name="splash_image">splash image</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="save">Save</string>
    <string name="all_workers">Workers</string>
    <string name="add_workers">Save</string>

    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="title">Role</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="age">Age</string>

    <string name="sex">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="image">Add image</string>
    <string name="add_user">Add worker</string>
    <string name="add_worker_button">Add worker</string>
    <string name="product_description">Brick salt for iron for milk production</string>
    <string name="product_name">Product name</string>
    <string name="price_value">shs 10,000</string>
    <string name="product_quantity">Qty: 90 pieces</string>
    <string name="success_toast">Worker added successfully</string>
    <string name="radio_value">Radio Value</string>
    <string name="all_products">All products</string>
</resources>